# portfolio

./: .gitignore  Makefile  README.md  archives.html  authors.html  categories.html  index.html  love-your-coworkers-by-type-hinting.html  pelicanconf.py  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican.yml
author/: austin-witherspoon.html
category/: programming.html
content/extra/: gazoonkas.html  index.html  p4a_profile.html  tb_fighters_canada_profile.html
content/pages/: about.md  home.md
content/programming/: how-timewarp-works-in-aaf-files.md  love_your_coworkers_by_type_hinting.md  put_your_garbage_in_a_bag.md
content/static/: custom.css
feeds/: all.atom.xml  programming.atom.xml
src/portfolio/: __init__.py
tag/: programming.html  python.html  type-hints.html
themes/Flex/static/stork/: stork.css
themes/Flex/static/stylesheet/: variables.less
themes/Flex/templates/: base.html  index.html
themes/Flex/templates/partial/: feed.html  sidebar.html  stork.html
