[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Austin Witherspoon <contact@austinwitherspoon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
