[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pelican[markdown]>=4.8.0",
    "beautifulsoup4>=4.12.2",
    "pelican-search>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "flake8>=7.1.1",
    "ruff>=0.9.6",
]
